# policy-gradients

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
configs/: cispo.yaml  drgrpo.yaml  grpo.yaml  gspo.yaml  ppo.yaml  reinforce.yaml  rloo.yaml
grpo/: buffer.py  loss.py  train.py
pgrad/: buffer.py  config.py  loss.py  train.py
policy_gradients/: buffer.py  config.py  loss.py  train.py
policy_grads/: config.py  train.py  utils.py
scripts/: cispo.sh  drgrpo.sh  grpo.sh  gspo.sh  ppo.sh  reinforce.sh  rloo.sh
