[project]
name = "micro-grpo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dataclasses>=0.8",
    "numpy>=2.4.0",
    "torch>=2.9.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]

[tool.ruff]
target-version = "py312"
line-length = 119

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "C4", "RUF"]
ignore = [
    "E731",
    "D",         # Disable pydocstyle checks
    "ANN",       # Disable missing type annotation checks
    "COM"        # Disable flake8-commas
]

[tool.ruff.lint.isort]
lines-after-imports = 2
