[project]
name = "micro-pgrad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "dataclasses>=0.8",
    "numpy>=2.4.0",
    "pre-commit>=4.5.1",
    "reasoning-gym>=0.1.24",
    "rich>=14.2.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "wandb>=0.23.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "wandb>=0.23.1",
]

[tool.ruff]
target-version = "py312"
line-length = 119

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "C4", "RUF"]
ignore = [
    "E731",
    "D",         # Disable pydocstyle checks
    "ANN",       # Disable missing type annotation checks
    "COM",       # Disable flake8-commas
    "F841",      # Ignore unused variables (often used as placeholders)
    "RUF059",    # unused variable
    "B007",      # unused variable in loop
]

[tool.ruff.lint.isort]
lines-after-imports = 2
